@@ -1,3 +1,9 @@
+2005-09-08  Fariborz Jahanian <fjahanian@apple.com>
+
+	Radar 4168635
+	* config/i386/i386.c (ix86_delegitimize_address): Recognize
+	pattern for darwin-style PIC address of a constant.
+
 2005-09-07  Dale Johannesen  <dalej@apple.com>
 
 	Radar 4228294
