@@ -2262,17 +2262,17 @@
    (set_attr "mode" "SF,DI,SF")])
 ;; APPLE LOCAL end 3501055 mainline candidate
 
+/* APPLE LOCAL begin mainline 2005-09-07 */
 (define_split
   [(set (match_operand:SF 0 "push_operand" "")
 	(match_operand:SF 1 "memory_operand" ""))]
   "reload_completed
    && GET_CODE (operands[1]) == MEM
-   && GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF
-   && CONSTANT_POOL_ADDRESS_P (XEXP (operands[1], 0))"
+   && constant_pool_reference_p (operands[1])"
   [(set (match_dup 0)
 	(match_dup 1))]
-  "operands[1] = get_pool_constant (XEXP (operands[1], 0));")
-
+  "operands[1] = avoid_constant_pool_reference (operands[1]);")
+/* APPLE LOCAL end mainline 2005-09-07 */
 
 ;; %%% Kill this when call knows how to work this out.
 (define_split
@@ -2884,11 +2884,12 @@
    && GET_CODE (operands[1]) == MEM
    && (GET_MODE (operands[0]) == XFmode
        || GET_MODE (operands[0]) == SFmode || GET_MODE (operands[0]) == DFmode)
-   && GET_CODE (XEXP (operands[1], 0)) == SYMBOL_REF
-   && CONSTANT_POOL_ADDRESS_P (XEXP (operands[1], 0))"
+/* APPLE LOCAL begin mainline 2005-09-07 */
+  && constant_pool_reference_p (operands[1])"
   [(set (match_dup 0) (match_dup 1))]
 {
-  rtx c = get_pool_constant (XEXP (operands[1], 0));
+  rtx c = avoid_constant_pool_reference (operands[1]);
+/* APPLE LOCAL end mainline 2005-09-07 */
   rtx r = operands[0];
 
   if (GET_CODE (r) == SUBREG)
